made change to form assignment

--- a/html/exercise/05_forms_exercise.html
+++ b/html/exercise/05_forms_exercise.html
@@ -18,10 +18,10 @@
     <input type="text" name="username" id="username" placeholder="Enter your Username" required>
 
     <label for="email">Email</label>
-    <input type="email" name="email" id="email" required placeholder="Enter your Email">
+    <input type="email" name="email" id="email" placeholder="Enter your Email" required>
 
     <label for="password">Password</label>
-    <input type="password" name="password" id="password" placeholder="Enter your Password"required>
+    <input type="password" name="password" id="password" placeholder="Enter your Password" required>
 
     <button>Login</button>
 
